2002-10-23  Phil Schwan  <phil@clusterfs.com>
	* version v0_5_15
	* bug fixes:
	  - in-use dentries weren't being reused properly (617851)
	  - prevent multiple LDLM setup (599178)
	  - fix LOV size calculations for truncate (617853)
	  - fix client handling of MDS intent errors (POSIX)
	  - fix permission bug in lovstripe.c test (624321)
	  - fix MDS thread deadlock (625069)
	  - truncate past end of file could corrupt data
	  - proper cleanup after timeouts, crashes, etc (592524, 550815)
	  - a race in recovery could return ETIMEDOUT to apps (623947)
	  - building outside the source directory was fixed
	* the howto was brought (more) up to date (582544)
	* major progress was made on recovery functionality

2002-10-10  Phil Schwan  <phil@clusterfs.com>
	* version v0_5_14
	* bug fixes:
	  - recovery deadlock fix
	  - rm -rf causes LBUG fix (617817)
          - file open by multiple tasks fix (618962)
	  - directory permissions bugs (602707 and 620007)
	  - journal_stop fixed with locking (611313)
	  - O_APPEND failures resolved (618273, perhaps 614459)
	  - lconf PATH fix (619770)
	  - IA64 build fix (621450)
	  - RPC buffer sizes scale with amount of memory

2002-10-01  Phil Schwan  <phil@clusterfs.com>
	* version v0_5_13
	* bug fixes:
	  - locks would be cancelled without throwing away data pages,
	    resulting in inconsistent data (605627)
	  - inode attributes were not always being refreshed (605627, 612449)
	  - lconf now continues to cleanup after lctl reports an error
	  - MDS now enforces user permissions (602707)
	  - lprocfs cleanup fixed, but not yet enabled (614157)
	  - fixed infinite server hang, should a client not respond to an AST
	  - avoid going into recovery if user calls readlink() with a buffer
	    that's too small (613941)
	  - AST RPCs no longer require replies (614867) -- this may be changed
	  - don't crash server if client sends an IOV that's too big (611336)
	  - fixed lock conversion deadlock (611892)